	  Eliminated warnings.
	Rev 7284
	* all: Eliminating warnings.
	Rev 7285
	* usecode/intrinsics.cc: Intrinsic path_run_usecode drags party members in
	  BG also (confirmed in originals).
	Rev 7286
	* content/bgkeyring/*: Fixing spellcasting AI by disabling it for the time
	  being. Updating Keyring readme.
	* docs/exult_intrinsics.txt: Updated with changes from quite a ways back.

2013-01-12 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac and all makefile.am files: fixed compiling with current 
	  autotools and removed many autotools warnings.

2013-01-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing bug exposed by revision 7267 (bug #3600300 "as_npc()
	  causes issues (warning fix regression)") before which the the avatar was
	  being incorrectly cast from Main_actor to unrelated class Npc_actor.

2013-01-10	Malignant Manor <malignantmanor@users.sourceforge.net>
	* all: Eliminate some Cppcheck errors and noise

2013-01-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Collecting all hard-coded usecode functions in separate header until
	  they are properly de-hard-coded. Eliminated warnings. Consolidated  32-bit
	  usecode opcodes with their 16-bit counterparts when they were otherwise
	  identical except for size of data read. Improved string reading functions.
	Rev 7271:
	* all: Made party members less prone to teleporting while trying to sit on
	  barges. This is done by having party members persistently repathfinding if
	  the path is blocked, and by ignoring NPCs that aren't sitting, lying down,
	  etc. when determining if it is possible to reach the seat. Also, some more
	  warnings eliminated. Further, actors no longer move aside when they are on
	  the move. Moreover, party members will also stand at rest after a while,
	  as the avatar does, matching the original games. Finally, the avatar will
	  have bad feelings when saving too often.

2013-01-08	Marzo Sette Torres Junior <marzojr@yahoo.com>